erDiagram
    VISITS {
        int id PK
        int movie_id FK
        int cinema_id FK
        int auditorium_id FK
        int ticket_type_id FK
        datetime visit_date
        string row
        string seat
        decimal price
        datetime created_at
        datetime updated_at
    }

    MOVIES {
        int id PK
        string title
        string tmdb_id
        string poster_path
        string release_date
        string runtime
        datetime created_at
        datetime updated_at
    }

    CINEMA_CHAINS {
        int id PK
        string name
        string description
        datetime created_at
        datetime updated_at
    }

    CINEMAS {
        int id PK
        int cinema_chain_id FK
        string name
        string location
        string description
        datetime created_at
        datetime updated_at
    }

    AUDITORIUMS {
        int id PK
        int cinema_id FK
        string name
        string description
        datetime created_at
        datetime updated_at
    }

    TICKET_TYPES {
        int id PK
        string name
        string description
        datetime created_at
        datetime updated_at
    }

    CINEMA_PRICE_HISTORY {
        int id PK
        int cinema_id FK
        decimal base_price
        date effective_from
        date effective_to
        datetime created_at
        datetime updated_at
    }

    CINEMA_TICKET_TYPE_PRICES {
        int id PK
        int cinema_chain_id FK
        int ticket_type_id FK
        decimal surcharge
        date effective_from
        date effective_to
        datetime created_at
        datetime updated_at
    }

    CINEMA_CHAINS ||--o{ CINEMAS : "has many"
    CINEMAS ||--o{ AUDITORIUMS : "has many"
    CINEMAS ||--o{ VISITS : "hosts"
    CINEMA_CHAINS ||--o{ CINEMA_PRICE_HISTORY : "has base prices"
    CINEMAS ||--o{ CINEMA_PRICE_HISTORY : "has price history"
    CINEMA_CHAINS ||--o{ CINEMA_TICKET_TYPE_PRICES : "has surcharges"
    TICKET_TYPES ||--o{ CINEMA_TICKET_TYPE_PRICES : "has surcharges"
    TICKET_TYPES ||--o{ VISITS : "used in"
    MOVIES ||--o{ VISITS : "watched in"
    AUDITORIUMS ||--o{ VISITS : "used for"